--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
     "name": "avs-sdk",
     "version": "1.0.0",
@@ -8,22 +7,8 @@
         "test": "node tests/test.js"
     },
     "dependencies": {
-        "web3": "^1.5.2",
-        "assert": "^2.0.0"
-    },
-    "devDependencies": {
-        "mocha": "^9.1.3",
-        "chai": "^4.3.4"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/Programmer-Shivansh/avs-sdk.git"
-    },
-    "keywords": [
-        "AVS",
-        "SDK",
-        "Blockchain"
-    ],
-    "author": "Shivansh Chauhan",
-    "license": "MIT"
+        "assert": "^2.0.0",
+        "jsonwebtoken": "^9.0.2",
+        "web3": "^1.5.2"
+    }
 }
